[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/UI/listaJugadores.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/playerLevelSelection.gd" type="Script" id=2]
[ext_resource path="res://src/UI/visualizadorDeNivel.gd" type="Script" id=3]
[ext_resource path="res://clic.wav" type="AudioStream" id=4]
[ext_resource path="res://efecto de sonido de boton portal 2.wav" type="AudioStream" id=5]
[ext_resource path="res://src/mundo/fuente/Lets Coffee.otf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.258824, 0.258824, 0.258824, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_offset = Vector2( 0.114, 0 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="GDScript" id=7]
script/source = "extends AudioStreamPlayer

func musica_fondo(musica):
	self.stream = musica
	self.play()

"

[node name="seleccionNivel" type="Control" groups=["wellcoming"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = 19.0
margin_right = 43.0
margin_bottom = 19.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 17.0 ]
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
margin_right = -44.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciaPartida" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -121.0
margin_right = 88.0
margin_bottom = -27.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar Partida"

[node name="levelDisplayer" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -261.0
margin_top = -160.0
margin_right = 260.0
margin_bottom = 132.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NombreNivel" type="Label" parent="Panel/levelDisplayer"]
anchor_right = 1.0
margin_left = 82.0
margin_top = 2.0
margin_right = -72.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
text = "NOMBRE DE MAPA"
align = 1
valign = 1

[node name="ImagenMapa" type="TextureRect" parent="Panel/levelDisplayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = -196.0
margin_right = -50.0
margin_bottom = -8.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modoJuego" type="Label" parent="Panel/levelDisplayer"]
margin_left = 15.0803
margin_top = 22.2236
margin_right = 90.0803
margin_bottom = 36.2236

[node name="label" type="Label" parent="Panel/levelDisplayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.0
margin_top = 11.0
margin_right = -17.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 4 )
text = "NUMERO"
align = 2

[node name="Siguiente" type="Button" parent="Panel/levelDisplayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 58.0
margin_top = -49.0
margin_right = 196.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
text = "Siguiente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anterior" type="Button" parent="Panel/levelDisplayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -45.0
margin_right = -53.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Anterior"

[node name="PreGameClientPanel" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = -669.136
margin_top = -271.0
margin_right = -506.136
margin_bottom = 2.9996

[node name="Node2D" type="Node2D" parent="." groups=["sonidos"]]

[node name="click" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 4 )

[node name="click2" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = SubResource( 7 )

[connection signal="button_down" from="Panel/IniciaPartida" to="." method="_on_IniciaPartida_button_down"]
[connection signal="mouse_entered" from="Panel/IniciaPartida" to="." method="_on_IniciaPartida_mouse_entered"]
[connection signal="pressed" from="Panel/IniciaPartida" to="." method="_on_StartGame_pressed"]
[connection signal="button_down" from="Panel/levelDisplayer/Siguiente" to="." method="_on_Siguiente_button_down"]
[connection signal="mouse_entered" from="Panel/levelDisplayer/Siguiente" to="." method="_on_Siguiente_mouse_entered"]
[connection signal="pressed" from="Panel/levelDisplayer/Siguiente" to="Panel/levelDisplayer" method="_on_Next_pressed"]
[connection signal="button_down" from="Panel/levelDisplayer/Anterior" to="." method="_on_Anterior_button_down"]
[connection signal="mouse_entered" from="Panel/levelDisplayer/Anterior" to="." method="_on_Anterior_mouse_entered"]
[connection signal="pressed" from="Panel/levelDisplayer/Anterior" to="Panel/levelDisplayer" method="_on_Previous_pressed"]
